--- a/.github/workflows/TestAndPublish.yml
+++ b/.github/workflows/TestAndPublish.yml
@@ -485,6 +485,14 @@ jobs:
               }
           }
           } @Parameters
+  BuildPipeScript: 
+    runs-on: ubuntu-latest
+    if: ${{ success() }}
+    steps: 
+      - name: Check out repository
+        uses: actions/checkout@v2
+      - name: BuildPipeScript
+        uses: StartAutomating/PipeScript@main
   HelpOut: 
     runs-on: ubuntu-latest
     if: ${{ success() }}
