Fixing Typo in GitHub Action (#55)

--- a/action.yml
+++ b/action.yml
@@ -178,7 +178,7 @@ runs:
                 Out-Host
         }
         
-        $PipeScriptTook = [Datetime]::Now - $PipeScriptScriptStart
+        $PipeScriptTook = [Datetime]::Now - $PipeScriptStart
         "::set-output name=PipeScriptRuntime::$($PipeScriptScriptTook.TotalMilliseconds)" | Out-Host
         
         $BuildPipeScriptStart = [DateTime]::Now
