--- a/.github/workflows/TestAndPublish.yml
+++ b/.github/workflows/TestAndPublish.yml
@@ -485,6 +485,14 @@ jobs:
               }
           }
           } @Parameters
+  UsePiecemeal: 
+    runs-on: ubuntu-latest
+    if: ${{ success() }}
+    steps: 
+      - name: Check out repository
+        uses: actions/checkout@v2
+      - name: UsePiecemeal
+        uses: StartAutomating/Piecemeal@main
   BuildPipeScript: 
     runs-on: ubuntu-latest
     if: ${{ success() }}
@@ -493,14 +501,6 @@ jobs:
         uses: actions/checkout@v2
       - name: BuildPipeScript
         uses: StartAutomating/PipeScript@main
-  HelpOut: 
-    runs-on: ubuntu-latest
-    if: ${{ success() }}
-    steps: 
-      - name: Check out repository
-        uses: actions/checkout@v2
-      - name: UseHelpOut
-        uses: StartAutomating/HelpOut@master
   RunEZOut: 
     runs-on: ubuntu-latest
     if: ${{ success() }}
@@ -512,5 +512,13 @@ jobs:
       - name: Push Changes
         shell: pwsh
         run: git push; exit 0
+  HelpOut: 
+    runs-on: ubuntu-latest
+    if: ${{ success() }}
+    steps: 
+      - name: Check out repository
+        uses: actions/checkout@v2
+      - name: UseHelpOut
+        uses: StartAutomating/HelpOut@master
 env: 
   NoCoverage: true
