Updating Action (preferring local bits typofix) (#98)

--- a/action.yml
+++ b/action.yml
@@ -124,7 +124,7 @@ runs:
         
         if ($PSD1Found) {
             $PipeScriptModulePath = $PSD1Found
-            Import-Module $psd1Path -Force -PassThru | Out-Host
+            Import-Module $PSD1Found -Force -PassThru | Out-Host
         } elseif ($env:GITHUB_ACTION_PATH) {
             $PipeScriptModulePath = Join-Path $env:GITHUB_ACTION_PATH 'PipeScript.psd1'
             if (Test-path $PipeScriptModulePath) {
