--- a/.github/workflows/TestAndPublish.yml
+++ b/.github/workflows/TestAndPublish.yml
@@ -485,15 +485,7 @@ jobs:
               }
           }
           } @Parameters
-  UsePiecemeal: 
-    runs-on: ubuntu-latest
-    if: ${{ success() }}
-    steps: 
-      - name: Check out repository
-        uses: actions/checkout@v2
-      - name: UsePiecemeal
-        uses: StartAutomating/Piecemeal@main
-  BuildPipeScript: 
+  BuildModule: 
     runs-on: ubuntu-latest
     if: ${{ success() }}
     steps: 
@@ -501,23 +493,10 @@ jobs:
         uses: actions/checkout@v2
       - name: BuildPipeScript
         uses: StartAutomating/PipeScript@main
-  RunEZOut: 
-    runs-on: ubuntu-latest
-    if: ${{ success() }}
-    steps: 
-      - name: Check out repository
-        uses: actions/checkout@v2
       - name: UseEZOut
         uses: StartAutomating/EZOut@master
-      - name: Push Changes
-        shell: pwsh
-        run: git push; exit 0
-  HelpOut: 
-    runs-on: ubuntu-latest
-    if: ${{ success() }}
-    steps: 
-      - name: Check out repository
-        uses: actions/checkout@v2
+      - name: UsePiecemeal
+        uses: StartAutomating/Piecemeal@main
       - name: UseHelpOut
         uses: StartAutomating/HelpOut@master
 env: 
