--- a/.github/workflows/TestAndPublish.yml
+++ b/.github/workflows/TestAndPublish.yml
@@ -448,9 +448,9 @@ jobs:
           
           if (-not $imported) { return } 
           
-          $foundModule = try { Find-Module -Name $imported.Name -ErrorAction SilentlyContinue } catch {}
+          $foundModule = try { Find-Module -Name $imported.Name -ErrorAction SilentlyContinue} catch {}
           
-          if ($foundModule -and $foundModule.Version -ge $imported.Version) {
+          if ($foundModule -and (([Version]$foundModule.Version) -ge ([Version]$imported.Version))) {
               "::warning::Gallery Version of $moduleName is more recent ($($foundModule.Version) >= $($imported.Version))" | Out-Host        
           } else {
               
@@ -485,7 +485,15 @@ jobs:
               }
           }
           } @Parameters
-  BuildModule: 
+  UsePiecemeal: 
+    runs-on: ubuntu-latest
+    if: ${{ success() }}
+    steps: 
+      - name: Check out repository
+        uses: actions/checkout@v2
+      - name: UsePiecemeal
+        uses: StartAutomating/Piecemeal@main
+  BuildPipeScript: 
     runs-on: ubuntu-latest
     if: ${{ success() }}
     steps: 
@@ -493,10 +501,23 @@ jobs:
         uses: actions/checkout@v2
       - name: BuildPipeScript
         uses: StartAutomating/PipeScript@main
+  RunEZOut: 
+    runs-on: ubuntu-latest
+    if: ${{ success() }}
+    steps: 
+      - name: Check out repository
+        uses: actions/checkout@v2
       - name: UseEZOut
         uses: StartAutomating/EZOut@master
-      - name: UsePiecemeal
-        uses: StartAutomating/Piecemeal@main
+      - name: Push Changes
+        shell: pwsh
+        run: git push; exit 0
+  HelpOut: 
+    runs-on: ubuntu-latest
+    if: ${{ success() }}
+    steps: 
+      - name: Check out repository
+        uses: actions/checkout@v2
       - name: UseHelpOut
         uses: StartAutomating/HelpOut@master
 env: 
