Updating action (improving email determination) (#152)

--- a/action.yml
+++ b/action.yml
@@ -47,11 +47,11 @@ runs:
       id: PipeScriptAction
       shell: pwsh
       env: 
-        SkipBuild: ${{inputs.SkipBuild}}
-        UserName: ${{inputs.UserName}}
-        CommitMessage: ${{inputs.CommitMessage}}
-        UserEmail: ${{inputs.UserEmail}}
         PipeScript: ${{inputs.PipeScript}}
+        UserName: ${{inputs.UserName}}
+        UserEmail: ${{inputs.UserEmail}}
+        CommitMessage: ${{inputs.CommitMessage}}
+        SkipBuild: ${{inputs.SkipBuild}}
       run: |
         $Parameters = @{}
         $Parameters.PipeScript = ${env:PipeScript}
@@ -168,7 +168,21 @@ runs:
         
         
         if (-not $UserName) { $UserName = $env:GITHUB_ACTOR }
-        if (-not $UserEmail) { $UserEmail = "$UserName@github.com" }
+        if (-not $UserEmail) { 
+            $GitHubUserEmail = 
+                if ($env:GITHUB_TOKEN) {
+                    Invoke-RestMethod -uri "https://api.github.com/user/emails" -Headers @{
+                        Authorization = "token $env:GITHUB_TOKEN"
+                    } |
+                        Select-Object -First 1 -ExpandProperty email
+                } else {''}
+            $UserEmail = 
+            if ($GitHubUserEmail) {
+                $GitHubUserEmail
+            } else {
+                "$UserName@github.com"
+            }    
+        }
         git config --global user.email $UserEmail
         git config --global user.name  $UserName
         
