--- a/action.yml
+++ b/action.yml
@@ -188,6 +188,12 @@ runs:
         
         if (-not $env:GITHUB_WORKSPACE) { throw "No GitHub workspace" }
         
+        $branchName = git rev-parse --abrev-ref HEAD
+        if (-not $branchName) { 
+        
+            return
+        }
+        
         git pull | Out-Host
         
         $PipeScriptStart = [DateTime]::Now
