Updating action (pulling just before push) (#163)

--- a/action.yml
+++ b/action.yml
@@ -190,11 +190,8 @@ runs:
         
         $branchName = git rev-parse --abrev-ref HEAD
         if (-not $branchName) { 
-        
             return
         }
-        
-        git pull | Out-Host
         
         $PipeScriptStart = [DateTime]::Now
         if ($PipeScript) {
@@ -231,11 +228,15 @@ runs:
         
                 git commit -m $ExecutionContext.SessionState.InvokeCommand.ExpandString($CommitMessage)
             }    
+            
+        
         
             $checkDetached = git symbolic-ref -q HEAD
             if (-not $LASTEXITCODE) {
+                "::notice::Pulling Changes" | Out-Host
+                git pull | Out-Host
                 "::notice::Pushing Changes" | Out-Host
-                git push        
+                git push | Out-Host
                 "Git Push Output: $($gitPushed  | Out-String)"
             } else {
                 "::notice::Not pushing changes (on detached head)" | Out-Host
