Updating Workflow (building in one job) (Fixes #209)

--- a/.github/workflows/TestAndPublish.yml
+++ b/.github/workflows/TestAndPublish.yml
@@ -410,6 +410,8 @@ jobs:
         run: |
           $Parameters = @{}
           $Parameters.ModulePath = ${env:ModulePath}
+          $Parameters.Exclude = ${env:Exclude}
+          $Parameters.Exclude = $parameters.Exclude -split ';' -replace '^[''"]' -replace  '[''"]$'
           foreach ($k in @($parameters.Keys)) {
               if ([String]::IsNullOrEmpty($parameters[$k])) {
                   $parameters.Remove($k)
@@ -418,16 +420,30 @@ jobs:
           Write-Host "::debug:: PublishPowerShellGallery $(@(foreach ($p in $Parameters.GetEnumerator()) {'-' + $p.Key + ' ' + $p.Value}) -join ' ')"
           & {param(
           [string]
-          $ModulePath
+          $ModulePath,
+          
+          [string[]]
+          $Exclude = @('*.png', '*.mp4', '*.jpg','*.jpeg', '*.gif', 'docs[/\]*')
           )
+          
           $gitHubEvent = if ($env:GITHUB_EVENT_PATH) {
               [IO.File]::ReadAllText($env:GITHUB_EVENT_PATH) | ConvertFrom-Json
           } else { $null }
+          
+          if (-not $Exclude) {
+              $Exclude = @('*.png', '*.mp4', '*.jpg','*.jpeg', '*.gif','docs[/\]*')
+          }
           
           
           @"
           ::group::GitHubEvent
           $($gitHubEvent | ConvertTo-Json -Depth 100)
+          ::endgroup::
+          "@ | Out-Host
+          
+          @"
+          ::group::PSBoundParameters
+          $($PSBoundParameters | ConvertTo-Json -Depth 100)
           ::endgroup::
           "@ | Out-Host
           
@@ -473,9 +489,24 @@ jobs:
               if (Test-Path $moduleGitPath) {
                   Remove-Item -Recurse -Force $moduleGitPath
               }
+          
+              if ($Exclude) {
+                  "::notice::Attempting to Exlcude $exclude" | Out-Host
+                  Get-ChildItem $moduleTempPath -Recurse |
+                      Where-Object {                
+                          foreach ($ex in $exclude) {
+                              if ($_.FullName -like $ex) {
+                                  "::notice::Excluding $($_.FullName)" | Out-Host
+                                  return $true
+                              }
+                          }
+                      } | 
+                      Remove-Item
+              }
+          
               Write-Host "Module Files:"
               Get-ChildItem $moduleTempPath -Recurse
-              Write-Host "Publishing $moduleName [$($imported.Version)] to Gallery"
+              Write-Host "Publishing $moduleName [$($imported.Version)] to Gallery"    
               Publish-Module -Path $moduleTempPath -NuGetApiKey $gk
               if ($?) {
                   Write-Host "Published to Gallery"
@@ -485,15 +516,7 @@ jobs:
               }
           }
           } @Parameters
-  UsePiecemeal: 
-    runs-on: ubuntu-latest
-    if: ${{ success() }}
-    steps: 
-      - name: Check out repository
-        uses: actions/checkout@v2
-      - name: UsePiecemeal
-        uses: StartAutomating/Piecemeal@main
-  BuildPipeScript: 
+  BuildModule: 
     runs-on: ubuntu-latest
     if: ${{ success() }}
     steps: 
@@ -501,23 +524,10 @@ jobs:
         uses: actions/checkout@v2
       - name: BuildPipeScript
         uses: StartAutomating/PipeScript@main
-  RunEZOut: 
-    runs-on: ubuntu-latest
-    if: ${{ success() }}
-    steps: 
-      - name: Check out repository
-        uses: actions/checkout@v2
       - name: UseEZOut
         uses: StartAutomating/EZOut@master
-      - name: Push Changes
-        shell: pwsh
-        run: git push; exit 0
-  HelpOut: 
-    runs-on: ubuntu-latest
-    if: ${{ success() }}
-    steps: 
-      - name: Check out repository
-        uses: actions/checkout@v2
+      - name: UsePiecemeal
+        uses: StartAutomating/Piecemeal@main
       - name: UseHelpOut
         uses: StartAutomating/HelpOut@master
 env: 
