workflow updates (simplifying gitpub) [skip ci]

--- a/.github/workflows/OnIssue.yml
+++ b/.github/workflows/OnIssue.yml
@@ -19,12 +19,10 @@ jobs:
           PublishParameters: |
             {
                 "Get-GitPubIssue": {
-                    "UserName": '${{github.repository_owner}}',
-                    "Repository": "PipeScript"
+                    "Repository": '${{github.repository}}'
                 },
                 "Get-GitPubRelease": {
-                    "UserName": '${{github.repository_owner}}',
-                    "Repository": "PipeScript"
+                    "Repository": '${{github.repository}}'
                 },
                 "Publish-GitPubJekyll": {
                     "OutputPath": "docs/_posts"
