--- a/.github/workflows/TestAndPublish.yml
+++ b/.github/workflows/TestAndPublish.yml
@@ -570,12 +570,15 @@ jobs:
               }
           }
           } @Parameters
-  BuildPipescript: 
+  BuildPipeScript: 
     runs-on: ubuntu-latest
     if: ${{ success() }}
     steps: 
       - name: Check out repository
         uses: actions/checkout@v2
+      - name: Use PSSVG Action
+        uses: StartAutomating/PSSVG@main
+        id: PSSVG
       - name: UsePiecemeal
         uses: StartAutomating/Piecemeal@main
       - name: BuildPipeScript
