Updating action (improving output)

--- a/action.yml
+++ b/action.yml
@@ -36,10 +36,10 @@ runs:
       id: PipeScriptAction
       shell: pwsh
       env: 
-        InstallModule: ${{inputs.InstallModule}}
-        CommitMessage: ${{inputs.CommitMessage}}
-        UserName: ${{inputs.UserName}}
         PipeScript: ${{inputs.PipeScript}}
+        UserName: ${{inputs.UserName}}
+        CommitMessage: ${{inputs.CommitMessage}}
+        InstallModule: ${{inputs.InstallModule}}
         SkipBuild: ${{inputs.SkipBuild}}
         UserEmail: ${{inputs.UserEmail}}
       run: |
@@ -115,6 +115,9 @@ runs:
         $($gitHubEvent | ConvertTo-Json -Depth 100)
         ::endgroup::
         "@ | Out-Host
+        
+        # Set -ErrorActionPreference to continue.
+        $global:ErrorActionPreference = 'continue'
         
         #region -InstallModule
         if ($InstallModule) {
@@ -215,7 +218,7 @@ runs:
         }
         
         $PipeScriptTook = [Datetime]::Now - $PipeScriptStart
-        "::notice title=PipeScriptRuntime::$($PipeScriptScriptTook.TotalMilliseconds)" | Out-Host
+        "::notice:: .PipeScript ran in $($PipeScriptScriptTook.TotalMilliseconds) ms" | Out-Host
         
         $BuildPipeScriptStart = [DateTime]::Now
         if (-not $SkipBuild) {
@@ -225,11 +228,18 @@ runs:
                 Out-Host
         }
         
+        "::notice:: Build-PipeScript ran in $($PipeScriptScriptTook.TotalSeconds) seconds" | Out-Host
+        
         $BuildPipeScriptEnd = [DateTime]::Now
         $BuildPipeScriptTook = $BuildPipeScriptEnd - $BuildPipeScriptStart
-        "::notice title=PipeScriptFilesBuiltCount::$($buildOutputFiles.Length)"              | Out-Host
-        "::notice title=PipeScriptFilesBuilt::$($buildOutputFiles -join ';')"                | Out-Host
-        "::notice title=PipeScriptBuildRuntime::$($BuildPipeScriptTook.TotalMilliseconds)"   | Out-Host
+        "::group::$($buildOutputFiles.Length) files built in $($BuildPipeScriptTook.TotalSeconds) seconds" |
+            Out-Host
+        
+        @(
+            $buildOutputFiles | Select-Object -ExpandProperty Fullname
+        ) -join [Environment]::newLine | Out-Host
+        
+        "::endgroup::" | Out-Host
         if ($CommitMessage -or $anyFilesChanged) {
             if ($CommitMessage) {
                 Get-ChildItem $env:GITHUB_WORKSPACE -Recurse |
