Updating action (improving output)

--- a/action.yml
+++ b/action.yml
@@ -229,10 +229,11 @@ runs:
                 Out-Host
         }
         
-        "::notice:: Build-PipeScript ran in $($PipeScriptTook.TotalSeconds) seconds" | Out-Host
+        
         
         $BuildPipeScriptEnd = [DateTime]::Now
         $BuildPipeScriptTook = $BuildPipeScriptEnd - $BuildPipeScriptStart
+        "::notice:: Build-PipeScript ran in $($BuildPipeScriptTook.TotalSeconds) seconds" | Out-Host
         "::group::$($buildOutputFiles.Length) files built in $($BuildPipeScriptTook.TotalSeconds) seconds" |
             Out-Host
         
