--- a/action.yml
+++ b/action.yml
@@ -223,10 +223,16 @@ runs:
         
         $BuildPipeScriptStart = [DateTime]::Now
         if (-not $SkipBuild) {
-            $buildOutputFiles = @(Build-Pipescript -InputPath $env:GITHUB_WORKSPACE)
-            $buildOutputFiles |
-                . $processScriptOutput  | 
-                Out-Host
+            $pipeScriptBuildErrors = $null
+            $buildOutputFiles = @(Build-Pipescript -InputPath $env:GITHUB_WORKSPACE -ErrorVariable pipeScriptBuildErrors)
+            if ($pipeScriptBuildErrors) {
+                $pipeScriptBuildErrors
+                exit 1
+            } else {
+                $buildOutputFiles |
+                    . $processScriptOutput  | 
+                    Out-Host
+            }    
         }
         
         
