Updating Workflow (Using GitLogger)

--- a/.github/workflows/TestAndPublish.yml
+++ b/.github/workflows/TestAndPublish.yml
@@ -576,6 +576,9 @@ jobs:
     steps: 
       - name: Check out repository
         uses: actions/checkout@v2
+      - name: GitLogger
+        uses: GitLogging/GitLoggerAction@main
+        id: GitLogger
       - name: Use PSSVG Action
         uses: StartAutomating/PSSVG@main
         id: PSSVG
