Improving Action Tracing (adding notice)

--- a/action.yml
+++ b/action.yml
@@ -220,7 +220,7 @@ runs:
         
         $PipeScriptTook = [Datetime]::Now - $PipeScriptStart
         "::notice:: .PipeScript ran in $($PipeScriptTook.TotalMilliseconds) ms" | Out-Host
-        
+        "::notice:: Building Files in '$env:GITHUB_WORKSPACE'" | Out-Host
         $BuildPipeScriptStart = [DateTime]::Now
         $pipeScriptBuildErrors = $null
         if (-not $SkipBuild) {
@@ -234,7 +234,7 @@ runs:
         }
         
         if ($pipeScriptBuildErrors) {
-            "::error::$($pipeScriptBuildErrors | Out-String)"
+            "::error::$($pipeScriptBuildErrors | Out-String)" | Out-Host
             $pipeScriptBuildErrors
             exit 1
         } 
