Improving Action Tracing (adding list of built files)

--- a/action.yml
+++ b/action.yml
@@ -227,6 +227,8 @@ runs:
             
             $buildOutputFiles = @(Build-Pipescript -InputPath $env:GITHUB_WORKSPACE -ErrorVariable pipeScriptBuildErrors)
             if ($buildOutputFiles) {
+                "::notice:: $($buildOutputFiles.Length) files outputted" | Out-Host        
+                "$($buildOutputFiles.FullName -join [Environment]::newLine)" | Out-Host
                 $buildOutputFiles |
                     . $processScriptOutput  | 
                     Out-Host
@@ -234,6 +236,7 @@ runs:
         }
         
         if ($pipeScriptBuildErrors) {
+            "There were build errors" | Out-Host
             "::error::$($pipeScriptBuildErrors | Out-String)" | Out-Host
             $pipeScriptBuildErrors
             exit 1
